--- a/computador1.html
+++ b/computador1.html
@@ -10,7 +10,7 @@
 
   <body class="cor">
     <header>
-    <nav class="barranav navbar navbar-expand-lg fixed-top cor-nav navbar-light">
+    <!-- <nav class="barranav navbar navbar-expand-lg fixed-top cor-nav navbar-light">
       <button class="back_botao navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="botao navbar-toggler-icon"></span>
       </button>
@@ -25,7 +25,24 @@
      
         </ul>
       </div>
-    </nav> 
+    </nav>  -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+      <div class="container">
+          <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/icon.png"  height="40px" alt="" /></a>
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+              Menu
+              <i class="fas fa-bars ml-1"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+              <ul class="navbar-nav text-uppercase ml-auto">
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Início</a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#evento">A Semana</a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#concurso">Festival</a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="palestras.html">Palestras</a></li>
+              </ul>
+          </div>
+      </div>
+  </nav>
   </header>
   
   
