--- a/cadastro.html
+++ b/cadastro.html
@@ -13,13 +13,21 @@
     <body>
         <!-- nav -->
   <header>
-    <nav class="barranav navbar navbar-expand-lg fixed-top cor-nav navbar-light">
-      <button class="back_botao navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="botao navbar-toggler-icon"></span>
-      </button>
-      <img class="" src="img/icon.png" height="40px" >
-      <a class="logo navbar-brand" href="feed.php">Painel de Controle</a>
-    </nav> 
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top cor-nav">
+      <div class="container">
+          <a class=" js-scroll-trigger" href="#page-top"><img src="img/icon.png"  height="40px" alt="" /></a>
+          <button class="navbar-toggler navbar-toggler-right text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+              Menu
+              <i class="fas fa-bars ml-1"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+              <ul class="navbar-nav text-uppercase ml-auto">
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="index.html">Início</a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="painel.html">Maquinas</a></li>
+              </ul>
+          </div>
+      </div>
+  </nav>
   </header>
 
 
@@ -27,18 +35,18 @@
         <div class="cadastro container">
             <form>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Endereço de email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
-                  <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+                  <label for="exampleInputEmail1">Seu Nome:</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu Nome">
+                  <small id="emailHelp" class="form-text text-muted">espaço para texto</small>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword1">Senha</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                  <label for="exampleInputPassword1">Matricula</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Matricula">
                 </div>
-                <div class="form-group form-check">
+                <!-- <div class="form-group form-check">
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
                   <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
-                </div>
+                </div> -->
                 <button type="submit" class="btn btn-primary">Enviar</button>
               </form>
         </div>
