--- a/painel.html
+++ b/painel.html
@@ -13,23 +13,23 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-                <div class="container">
-                    <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/icon.png"  height="40px" alt="" /></a>
-                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                        Menu
-                        <i class="fas fa-bars ml-1"></i>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarResponsive">
-                        <ul class="navbar-nav text-uppercase ml-auto">
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="index.html">Início</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="#evento">A Semana</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="#concurso">Festival</a></li>
-                            <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="palestras.html">Palestras</a></li>
-                        </ul>
-                    </div>
+          <nav class="navbar navbar-expand-lg navbar-dark fixed-top cor-nav">
+            <div class="container">
+                <a class=" js-scroll-trigger" href="#page-top"><img src="img/icon.png"  height="40px" alt="" /></a>
+                <button class="navbar-toggler navbar-toggler-right text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars ml-1"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav text-uppercase ml-auto">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="index.html">Início</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="painel.html">Maquinas</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="cadastro.html">Login</a></li>
+                      
+                    </ul>
                 </div>
-            </nav>
+            </div>
+        </nav>
         </header>
 
         <section  id="maquinas" data-anime="left"  class="padd-section text-center wow fadeInUp">
@@ -128,7 +128,8 @@
            
           </section>
 
-
+          <br>
+          <br>
 
 
 
