--- a/comps/computador1.html
+++ b/comps/computador1.html
@@ -28,15 +28,15 @@
     </nav>  -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top cor-nav">
       <div class="container">
-          <a class=" js-scroll-trigger" href="#page-top"><img src="img/icon.png"  height="40px" alt="" /></a>
+          <a class=" js-scroll-trigger" href="#page-top"><img src="../img/icon.png"  height="40px" alt="" /></a>
           <button class="navbar-toggler navbar-toggler-right text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               Menu
               <i class="fas fa-bars ml-1"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav text-uppercase ml-auto">
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="index.html">Início</a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="painel.html">Maquinas</a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="../index.html">Início</a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger text-primary" href="../painel.html">Maquinas</a></li>
                  
               </ul>
           </div>
@@ -53,7 +53,7 @@
     <div class="row">
 
      <div class="col-6">
-        <img src="img/pc.png" width="350" height="200" alt="img" class="img-fluid">  
+        <img src="../img/pc.png" width="350" height="200" alt="img" class="img-fluid">  
       </div>
   
 
@@ -103,7 +103,7 @@
 
 
 
-<script src="pro.js"></script>
+<script src="../pro.js"></script>
 
   
 
