--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
   </div>
   <div class="col-sm-6 col-lg-4">
     <div class="team-member">
-        <img class="mx-auto circle" src="img/team/math.jpeg" alt="" width="200px" />
-        <h4>Matheus</h4>
+        <img class="mx-auto circle" src="img/team/.jpeg" alt="" width="200px" />
+        <h4>Myrel</h4>
         <p class="text-muted">Aluno</p>
     </div>
 </div>
